--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -39,6 +39,12 @@
 .calendar-link-hover:hover {
   background: transparent url("/media/icons/calendar.png") left center no-repeat; }
 
+.dregni-event-link {
+  background: transparent url("/media/icons/calendar.png") left center no-repeat; }
+
+.dregni-event-link-hover:hover {
+  background: transparent url("/media/icons/calendar.png") left center no-repeat; }
+
 .door_in-link {
   background: transparent url("/media/icons/door_in.png") left center no-repeat; }
 
@@ -67,6 +73,12 @@
   background: transparent url("/media/icons/group.png") left center no-repeat; }
 
 .group-link-hover:hover {
+  background: transparent url("/media/icons/group.png") left center no-repeat; }
+
+.teams-team-link {
+  background: transparent url("/media/icons/group.png") left center no-repeat; }
+
+.teams-team-link-hover:hover {
   background: transparent url("/media/icons/group.png") left center no-repeat; }
 
 .group_link-link {
@@ -133,6 +145,12 @@
   background: transparent url("/media/icons/vcard.png") left center no-repeat; }
 
 .vcard-link-hover:hover {
+  background: transparent url("/media/icons/vcard.png") left center no-repeat; }
+
+.auth-user-link {
+  background: transparent url("/media/icons/vcard.png") left center no-repeat; }
+
+.auth-user-link-hover:hover {
   background: transparent url("/media/icons/vcard.png") left center no-repeat; }
 
 .vcard_edit-link {
