--- a/sw/templates/breadcrumbs/iris_base.html
+++ b/sw/templates/breadcrumbs/iris_base.html
@@ -3,19 +3,13 @@
 {% with request.GET.team as team_slug %}
     {% if team_slug %}
         {% with team_slug|teamforslug as group %}
-            {% for parent in group.parents %}
-                {% breadcrumb_url_css "icon-link group-link" parent.name teams_team_index slug=parent.slug %}
-            {% endfor %}
-            {% breadcrumb_url_css "icon-link group-link" group.name teams_team_index slug=group.slug %}
-            {% breadcrumb_url 'Topics' team_topics slug=group.slug %}
+            {% include "breadcrumbs/iris_base_with_groups.html" %}
         {% endwith %}
     {% else %}
         {% if group %}
-            {% for parent in group.parents %}
-                {% breadcrumb_url_css "icon-link group-link" parent.name teams_team_index slug=parent.slug %}
-            {% endfor %}
-            {% breadcrumb_url_css "icon-link group-link" group.name teams_team_index slug=group.slug %}
-            {% breadcrumb_url 'Topics' team_topics slug=group.slug %}
+            {% include "breadcrumbs/iris_base_with_groups.html" %}
+        {% else %}
+            {% breadcrumb 'Topics' %}
         {% endif %}
     {% endif %}
 {% endwith %}
