--- a/sw/media/css/base.scss
+++ b/sw/media/css/base.scss
@@ -398,6 +398,7 @@ div#content {
   h1 {
     border-bottom: $accent-width solid $fgcolor;
     padding: 0 $gutter-width 0 $gutter-width;
+    font-size: 16pt;
   }
 }
 
