Hide other item types after selecting one.  Offer a cancel button to show other types.

--- a/sw/templates/iris/items/generic.add.html
+++ b/sw/templates/iris/items/generic.add.html
@@ -5,6 +5,7 @@
     <fieldset class="blockLabels">
         {{ item_type.form|as_uni_form }}
         <div class="buttonHolder">
+            <a class="button cancel secondaryAction" href="{{ topic.get_absolute_url }}">Cancel</a>
             <button class="primaryAction" type="submit" name="action_submit" >{% trans 'Add to topic' %}</button>
         </div>
     </fieldset>
