--- a/sw/templates/account/base.html
+++ b/sw/templates/account/base.html
@@ -11,6 +11,8 @@
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
 
+{% block body_class %}{{ block.super }} hq-section{% endblock %}
+
 {% block page_content %}
     <div id="content" class="grid_12">
         {% block body %}
