--- a/sw/templates/base_hq_12.html
+++ b/sw/templates/base_hq_12.html
@@ -6,7 +6,7 @@
 
 {% block body_class %}{{ block.super }} hq{% endblock %}
 
-{% block header_slogan %}Volunteer Headquarters <span class="beta">Beta</span>{% endblock %}
+{% block header_slogan %}Volunteer HQ <span class="beta">Beta</span>{% endblock %}
 
 {% block breadcrumbs %}
     {{ block.super }}
