--- a/sw/templates/sidebars/wikicommon.html
+++ b/sw/templates/sidebars/wikicommon.html
@@ -5,6 +5,6 @@
 
     <ul>
         <li><a href="{% groupurl wakawaka_page_list group %}"><strong>Alphabetical list of team pages &rarr;</strong></a></li>
-        <li><a href="{% groupurl wakawaka_index group %}"><a href="{% groupurl wakawaka_page_list group %}"><strong>View and edit the team home page &rarr;</strong></a></a></li>
+        <li><a href="{% groupurl wakawaka_index group %}"><strong>View and edit the team home page &rarr;</strong></a></li>
     </ul>
 </div>
